agnostics/default-network-policy/aws/base/clusterwide-networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-all-selected-namespaces
spec:
  # Selects all pods in this namespace
  endpointSelector:
    matchExpressions:
      - key: "k8s:io.kubernetes.pod.namespace"
        operator: In
        values:
          - kube-system
  ingress:
    - fromEntities:
        - all
  egress:
    - toEntities:
        - all

---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-host-all
spec:
  # This is in addition to CiliumClusterwideNetworkPolicy/allow-pod-to-pod-via-gateway
  description: >-
    Allows all Host/Node to Pod traffic. No Pod-to-Pod traffic allowed.
    Explicitly allow Host Identity 1 to reach all pods.
  endpointSelector: {}
  egress:
    - toEntities:
        - host
        - remote-node
        - health
        - unmanaged
  ingress:
    - fromEntities:
        - host
        - remote-node
        - health
        - unmanaged

---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: k8tre-default-network-policy
spec:
  # Every pod except project-namespaces
  # This is in addition to CiliumClusterwideNetworkPolicy/allow-pod-to-pod-via-gateway
  description: Allow access to VPC and local domains
  endpointSelector:
    matchExpressions:
      - key: io.cilium.k8s.namespace.labels.k8tre.io/resource-type
        operator: NotIn
        values:
          - project-namespace

  egress:
    - toCIDR:
        # TODO: For now allow all traffic to VPC
        - 10.0.0.0/16
    - toFQDNs:
        # TODO: narrow this down
        - matchPattern: "**.amazonaws.com"
        - matchPattern: "**.${DOMAIN}"
    # Need to force DNS via Cilium
    # https://docs.cilium.io/en/stable/security/policy/language/#dns-obtaining-data
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              # TODO: narrow this down
              - matchPattern: "*"
    - toEntities:
        - cluster
        - host
        - remote-node
  ingress:
    - fromEntities:
        - cluster
        - host
        - remote-node
